Added the ability to view a single issue, view all issues, create an issue, and edit an issue to the Flask site.

--- a/issue_web_gui/issue_web_gui/templates/all_issues.html
+++ b/issue_web_gui/issue_web_gui/templates/all_issues.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 {% for issue in issues %}
-<div class=flash>{{ issue.id }}</div>
+    <div style="margin:10px auto">
+        {% include "issue.html" %}
+    </div>
 {% endfor %}
-
-<p>Use this area to provide additional information.</p>
 
 {% endblock %}
