--- a/angular_frontend/src/app/create-issue/create-issue.component.html
+++ b/angular_frontend/src/app/create-issue/create-issue.component.html
@@ -1,19 +1,25 @@
-<form action="" method="post">
-	<div class="form-group">
-		<label for="summary">Summary:</label>
-		<input type="text" name="summary" id="summary" class="form-control" />
-	</div>
-	<div class="form-group">
-		<label for="desc">Description:</label>
-		<input type="text" name="description" id="desc" class="form-control" />
-	</div>
-	<div class="form-group">
-		<label for="assignee">Assignee:</label>
-		<input type="text" name="assignee" id="assignee" class="form-control" />
-	</div>
-	<div>
-		<label for="reporter">Reporter:</label>
-		<input type="text" name="reporter" id="reporter" class="form-control" />
-	</div>
-	<button type="submit" class="btn btn-primary">Submit</button>
-</form>
+<mat-card>
+	<mat-card-title>Create Issue</mat-card-title>
+	<mat-card-content>
+		<form [formGroup]="issueForm" class="container">
+			<mat-form-field>
+				<input matInput placeholder="Summary" formControlName="summary" />
+				<mat-error *ngIf="issueForm.invalid">{{ getSummaryErrorMessage() }}</mat-error>
+			</mat-form-field>
+
+			<mat-form-field>
+				<textarea matInput placeholder="Description" formControlName="description"></textarea>
+			</mat-form-field>
+
+			<mat-form-field>
+				<input matInput placeholder="Assignee" formControlName="assignee" />
+			</mat-form-field>
+
+			<mat-form-field>
+				<input matInput placeholder="Reporter" formControlName="reporter" />
+			</mat-form-field>
+		</form>
+
+		<button mat-button color="primary" type="submit" (click)="submit()" [disabled]="issueForm.invalid">Submit</button>
+	</mat-card-content>
+</mat-card>
