Added header and started differentiating between list issues and single issues

--- a/angular_frontend/src/app/issue-list/issue-list.component.html
+++ b/angular_frontend/src/app/issue-list/issue-list.component.html
@@ -1,3 +1,7 @@
-<div *ngFor="let issue of issues">
-	<app-issue [issue]="issue"></app-issue>
-</div>
+<mat-list>
+	<div *ngFor="let issue of issues">
+		<mat-list-item>
+			<app-issue-list-entry [issue]="issue"></app-issue-list-entry>
+		</mat-list-item>
+	</div>
+</mat-list>
