--- a/angular_frontend/src/styles.css
+++ b/angular_frontend/src/styles.css
@@ -1,6 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
+body, html {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100vh;
+}
+
 .container {
 	display: flex;
 	flex-direction: column;
@@ -9,3 +16,5 @@
 .container > * {
 	width: 100%;
 }
+
+
