--- a/angular_frontend/src/styles.css
+++ b/angular_frontend/src/styles.css
@@ -28,6 +28,10 @@ body, html {
 	align-items: center
 }
 
+.flex-justify-center {
+	justify-content: center;
+}
+
 .flex-item-right {
 	align-self: flex-end;
 }
