--- a/angular_frontend/src/app/issue-list/issue-list.component.html
+++ b/angular_frontend/src/app/issue-list/issue-list.component.html
@@ -1,7 +1,7 @@
-<div style="display: flex; justify-content:center">
+<div *ngIf="page" class="container flex-justify-center">
 	<mat-card style="width:1000px">
 		<mat-list>
-			<mat-list-item *ngFor="let issue of issues; index as i" style="margin:16px 0">
+			<mat-list-item *ngFor="let issue of page; index as i" style="margin:16px 0">
 				<div matLine>
 					<div class="container flex-row flex-align-center">
 						<span class="mat-h2" style="margin:0">{{ issue?.id }}</span>
@@ -13,12 +13,15 @@
 				</div>
 				<div matLine style="margin-bottom: 16px">
 					<div class="container flex-row-reverse">
-						<a mat-button style="width:auto;">View</a>
+						<a mat-button style="width:auto;" [routerLink]="issue.id">View</a>
 						<a mat-button style="width:auto;">Edit</a>
 					</div>
 				</div>
-				<mat-divider *ngIf="i + 1 !== issues.length"></mat-divider>
+				<mat-divider *ngIf="i + 1 !== page.length"></mat-divider>
 			</mat-list-item>
 		</mat-list>
 	</mat-card>
+</div>
+<div *ngIf="!page" class="container flex-align-center flex-justify-center" style="width:100%; height:50%">
+	<mat-spinner></mat-spinner>
 </div>
