--- a/angular_frontend/src/app/create-comment/create-comment.component.html
+++ b/angular_frontend/src/app/create-comment/create-comment.component.html
@@ -1,3 +1,4 @@
-<p>
-  create-comment works!
-</p>
+<mat-card class="container flex-column">
+	<mat-form-field><textarea matInput placeholder="Add a comment" rows="5"></textarea></mat-form-field>
+	<div class="flex-item-right"><button mat-button>Add Comment</button></div>
+</mat-card>
