--- a/angular_frontend/src/app/create-issue/create-issue.component.html
+++ b/angular_frontend/src/app/create-issue/create-issue.component.html
@@ -1,7 +1,7 @@
 <mat-card>
 	<mat-card-title>Create Issue</mat-card-title>
 	<mat-card-content>
-		<form [formGroup]="issueForm" class="container">
+		<form [formGroup]="issueForm" class="container flex-column">
 			<mat-form-field>
 				<input matInput placeholder="Summary" formControlName="summary" />
 				<mat-error *ngIf="issueForm.invalid">{{ getSummaryErrorMessage() }}</mat-error>
