--- a/angular_frontend/src/app/issue/issue.component.html
+++ b/angular_frontend/src/app/issue/issue.component.html
@@ -1,4 +1,4 @@
-<mat-card style="margin: 16px">
+<mat-card>
 	<mat-card-title-group color="primary">
 		<mat-card-title id="issue-id" data-id="{{ issue?.id }}">ID: {{ issue?.id }}</mat-card-title>
 		<mat-card-subtitle>{{ issue?.summary }}</mat-card-subtitle>
@@ -16,7 +16,6 @@
 		</div>
 	</mat-card-content>
 	<mat-card-actions>
-		<a mat-button color="primary" [routerLink]="viewLink">VIEW</a>
 		<a mat-button color="primary" [routerLink]="editLink">EDIT</a>
 	</mat-card-actions>
 </mat-card>
