Comments no longer use absolute pathing

--- a/angular_frontend/src/app/create-comment/create-comment.component.html
+++ b/angular_frontend/src/app/create-comment/create-comment.component.html
@@ -1,4 +1,4 @@
 <mat-card class="container flex-column">
-	<mat-form-field><textarea matInput placeholder="Add a comment" rows="5"></textarea></mat-form-field>
-	<div class="flex-item-right"><button mat-button>Add Comment</button></div>
+	<mat-form-field><textarea matInput placeholder="Add a comment" rows="5" [(ngModel)]="comment"></textarea></mat-form-field>
+	<div class="flex-item-right"><button mat-button (click)="submit()">Add Comment</button></div>
 </mat-card>
