--- a/angular_frontend/src/app/comment-list/comment-list.component.html
+++ b/angular_frontend/src/app/comment-list/comment-list.component.html
@@ -4,3 +4,6 @@
 		<mat-divider *ngIf="i + 1 !== comments.length"></mat-divider>
 	</div>
 </mat-list>
+<div *ngIf="!comments" class="container flex-align-center flex-justify-center" style="width:100%; height:50%">
+	<mat-spinner></mat-spinner>
+</div>
