Fixed bugs found in web frontend during UAT, also implemented response handling when creating/editing issues and adding a comment.

--- a/angular_frontend/src/app/comment-list/comment-list.component.html
+++ b/angular_frontend/src/app/comment-list/comment-list.component.html
@@ -1,3 +1,4 @@
+<app-create-comment [issue]="issue" (commentCreated)="onCreate($event)"></app-create-comment>
 <mat-list *ngIf="comments">
 	<div *ngFor="let comment of comments; index as i">
 		<app-comment [comment]="comment"></app-comment>
