--- a/angular_frontend/src/app/issue/issue.component.html
+++ b/angular_frontend/src/app/issue/issue.component.html
@@ -16,6 +16,6 @@
 		</div>
 	</mat-card-content>
 	<mat-card-actions>
-		<a mat-button color="primary" [routerLink]="editLink">EDIT</a>
+		<a mat-button color="primary" [routerLink]="editLink" routerLinkActive="active">EDIT</a>
 	</mat-card-actions>
 </mat-card>
