--- a/angular_frontend/src/app/issue/issue.component.html
+++ b/angular_frontend/src/app/issue/issue.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card *ngIf="issue">
 	<mat-card-title-group color="primary">
 		<mat-card-title id="issue-id" data-id="{{ issue?.id }}">ID: {{ issue?.id }}</mat-card-title>
 		<mat-card-subtitle>{{ issue?.summary }}</mat-card-subtitle>
@@ -6,13 +6,15 @@
 	<mat-card-content>
 		<div class="flash"><strong>Description: </strong>{{ issue?.description }}</div>
 		<div class=flash><strong>Status: </strong> {{ issue?.status }}</div>
-		<div class=flash><strong>Assignee: </strong>{{ issue?.assignee?.user }}, {{ issue?.assignee?.email }}</div>
+		<div class=flash><strong>Assignee: </strong>{{ userToString(issue.assignee) }}</div>
 		<div class=flash>
-			<strong>Reporter: </strong>{{ issue?.reporter?.user }}, {{ issue?.reporter?.email }}
+			<strong>Reporter: </strong>{{ userToString(issue.reporter) }}
 		</div>
 		<strong>Subscribers: </strong>
 		<div class=flash>
-			<!-- Subscribers go here -->
+			<div *ngFor="let subscriber of issue.subscribers">
+				{{ userToString(subscriber) }}
+			</div>
 		</div>
 	</mat-card-content>
 	<mat-card-actions>
